bug 31108.  fixed by manually positioning the view whenever reflow changes the frame r=rickg a=rickg